Fixed last update date

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       <p id="pageSubtitle">Conversion Rate &amp; Time to Offer/Deal</p>
     </div>
     <div class="header-right">
-      <span class="date-badge" id="dateBadge">Stand: –</span>
+      <span class="date-badge" id="dateBadge">Aktualisiert: –</span>
     </div>
   </header>
 
